# PolylineApproximation

./: README.md  polyline_test.cpp
polyline/: CMakeLists.txt
polyline/compression/: CMakeLists.txt  compression.cpp
polyline/compression/include/compression/: compression.hpp
polyline/error_measurement/: CMakeLists.txt  error.cpp
polyline/error_measurement/include/error/: error.hpp
polyline/test_generation/generators/: CMakeLists.txt
polyline/test_generation/generators/rand_points_tsp/: CMakeLists.txt  tsp_path.cpp
polyline/test_generation/generators/rand_points_tsp/include/tsp_path/: tsp_path.hpp
polyline/test_generation/generators/winding_path/: CMakeLists.txt  winding_path.cpp
polyline/test_generation/generators/winding_path/include/winding_path/: winding_path.hpp
polyline/utils/: CMakeLists.txt  common.hpp
polyline/utils/params/: CMakeLists.txt  params.cpp
polyline/utils/params/include/params/: params.hpp
polyline/visualizer/: CMakeLists.txt  result.txt  visualizer.cpp
polyline/visualizer/include/visualizer/: visualizer.hpp
